--- a/src/base/_base.sass
+++ b/src/base/_base.sass
@@ -1,10 +1,4 @@
-
 // Base
-// ––––––––––––––––––––––––––––––––––––––––––––––––––
-
-// The base font-size is set at 62.5% for having the convenience
-// of sizing rems in a way that is similar to using px. 1.6rem=16px
-// See $global-font-size in _variables.sass
 
 // Set box-sizing globally to handle padding and border widths
 *,
@@ -19,6 +13,7 @@ html
 
 // Default body styles
 body
+  margin: 0
   background: $body-background-color
   color: $text-color
   font-size: 1.6rem
@@ -31,5 +26,3 @@ header,
 hgroup,
 section
   display: block
-
-
