--- a/src/base/_variables.sass
+++ b/src/base/_variables.sass
@@ -1,9 +1,10 @@
-
 // Settings
-// ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 // Global
 // ---------
+
+// The base font-size is set at 62.5% for having the convenience
+// of sizing rems in a way that is similar to using px. 1.6rem=16px
 
 $global-font-size: 62.5%
 $global-width: 65rem
@@ -14,16 +15,16 @@ $body-background-color: $white
 $body-font-family: -apple-system, '.SFNSText-Regular', 'San Francisco', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 
-$z-index-1:   100;
-$z-index-2:   200;
-$z-index-3:   300;
-$z-index-4:   400;
-$z-index-5:   500;
-$z-index-6:   600;
-$z-index-7:   700;
-$z-index-8:   800;
-$z-index-9:   900;
-$z-index-10: 1000;
+$z-index-1:   100
+$z-index-2:   200
+$z-index-3:   300
+$z-index-4:   400
+$z-index-5:   500
+$z-index-6:   600
+$z-index-7:   700
+$z-index-8:   800
+$z-index-9:   900
+$z-index-10: 1000
 
 // Color
 // -------------
