--- a/src/utilities/_utility.sass
+++ b/src/utilities/_utility.sass
@@ -1,9 +1,7 @@
 
 // Utility
-// ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 // Display
-
 .block
   display: block
 
@@ -14,7 +12,6 @@
   display: flex
 
 // Float
-
 .clearfix
   +clearfix
 
@@ -25,17 +22,14 @@
   float: right
 
 // Overlay
-
 .overlay
   +overlay
 
 // Size
-
 .fullwidth
   width: 100%
 
 // Text
-
 .text-center
   text-align: center
 
@@ -46,31 +40,31 @@
   text-align: right
 
 // Visibility
-
 .hidden-mobile
   +media(mobile)
-    display: none !important
+    display: none
 
 .hidden-tablet
   +media(tablet)
-    display: none !important
+    display: none
 
 .hidden-touch
   +media(touch)
-    display: none !important
+    display: none
 
 .hidden-desktop
   +media(desktop)
-    display: none !important
+    display: none
 
 // Other
-
 .disabled
   pointer-events: none
 
 .m-0
-  margin: 0 !important
+  margin: 0
+
 .mb-0
-  margin-bottom: 0 !important
+  margin-bottom: 0
+
 .pb-0
-  padding-bottom: 0 !important
+  padding-bottom: 0
