--- a/src/components/_tabs.sass
+++ b/src/components/_tabs.sass
@@ -4,6 +4,7 @@
   overflow: hidden
   overflow-x: auto
   white-space: nowrap
+
   a
     border-bottom: .1rem solid $gray-lightest
     color: $gray
@@ -12,86 +13,112 @@
     padding: .5rem 0
     font-size: 1.4rem
     vertical-align: top
+
     &:hover
       border-bottom-color: $gray
       color: $primary
+
   li
     display: block
     margin-bottom: 0
     vertical-align: top
+
     & + li
       margin-left: 2rem
+
     &.is-active
       a
         border-bottom-color: $primary
         color: $primary
+
   ul
     border-bottom: .1rem solid $gray-lightest
     display: flex
+
   &.is-centered
     a
       padding: .5rem 1rem
+
     li
       & + li
         margin-left: 0
+
     ul
       justify-content: center
       text-align: center
+
   &.is-right
     ul
       justify-content: flex-end
+
   &.is-boxed
     a
       border: .1rem solid transparent
       border-radius: $global-radius $global-radius 0 0
       padding: .5rem 1.5rem
+
       &:hover
         background: $gray-lightest
         border-bottom-color: $gray-lightest
+
     li
       & + li
         margin-left: .5rem
+
       &.is-active
         a
           background: $white
           border-color: $gray-lightest
           border-bottom-color: transparent
+
     &.is-centered
       li
         &,
         & + li
           margin: 0 .2rem
+
   &.is-toggle
     a
       border: .1rem solid $gray-lightest
       margin-bottom: 0
       padding: .5rem 1rem
       position: relative
+
       &:hover
         background: $gray-lightest
         border-color: $primary
         z-index: 2
+
     li
       & + li
         margin-left: -.1rem
-      &:first-child a
-        border-radius: $global-radius 0 0 $global-radius
-      &:last-child a
-        border-radius: 0 $global-radius $global-radius 0
+
+      &:first-child
+        a
+          border-radius: $global-radius 0 0 $global-radius
+
+      &:last-child
+        a
+          border-radius: 0 $global-radius $global-radius 0
+
       &.is-active
         a
           background: $primary
           border-color: $primary
           color: $primary-invert
           z-index: 1
+
     ul
-      border-bottom: none
+      border-bottom: 0
+
   &.is-fullwidth
     +media(tablet)
       li
         flex: 1
+
         & + li
           margin-left: 0
+
       ul
         justify-content: center
         text-align: center
