Fix attribute selectors

--- a/src/components/_button.sass
+++ b/src/components/_button.sass
@@ -3,10 +3,9 @@
 
 .btn,
 button,
-input
-[type='button']
-[type='reset']
-[type='submit']
+input[type='button'],
+input[type='reset'],
+input[type='submit']
   background-color: $gray-lightest
   border: .1rem solid
   border-color: $gray-lightest
@@ -138,7 +137,7 @@ input
           background-color: transparent
           border-color: $color-invert
           color: $color-invert
-          
+
           &:hover
             background: transparentize($black, .5)
 
