--- a/src/components/_form.sass
+++ b/src/components/_form.sass
@@ -1,14 +1,13 @@
 
 // Form
 
-input
-[type='email']
-[type='number']
-[type='password']
-[type='search']
-[type='tel']
-[type='text']
-[type='url'],
+input[type='email'],
+input[type='number'],
+input[type='password'],
+input[type='search'],
+input[type='tel'],
+input[type='text'],
+input[type='url'],
 textarea,
 select
   appearance: none // Removes awkward default styles on some inputs for iOS
@@ -31,7 +30,7 @@ select
   @each $name, $pair in $colors
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
-    
+
     &.#{$name}
       border: .1rem solid $color
       outline: 0
@@ -57,9 +56,8 @@ fieldset
   border-width: 0
   padding: 0
 
-input
-[type='checkbox']
-[type='radio']
+input[type='checkbox'],
+input[type='radio']
   display: inline
 
 .label-inline
