--- a/src/base/_reset.sass
+++ b/src/base/_reset.sass
@@ -45,8 +45,7 @@ a:active,
 a:hover
   outline-width: 0
 
-abbr
-[title]
+abbr[title]
   border-bottom: 0
   text-decoration: underline
   text-decoration: underline dotted
@@ -124,21 +123,21 @@ select
 
 button,
 html [type='button'],
-[type='reset'],
-[type='submit']
+html [type='reset'],
+html [type='submit']
   -webkit-appearance: button
 
 button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner
+button[type='button']::-moz-focus-inner,
+button[type='reset']::-moz-focus-inner,
+button[type='submit']::-moz-focus-inner
   border-style: none
   padding: 0
 
 button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring
+button[type='button']:-moz-focusring,
+button[type='reset']:-moz-focusring,
+button[type='submit']:-moz-focusring
   outline: 1px dotted ButtonText
 
 fieldset
